# discord-recc-bot

./: Cargo.toml  reccs.json  run.sh  rustfmt.toml
src/: main.rs
