[package]
name = "discord-recc-bot"
version = "0.1.0"
authors = ["Karl Meakin <Karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde_json = "*"
serde = "*"

[dependencies.serenity]
default-features = false
features = ["framework", "rustls_backend", "standard_framework", "http", "cache"]
version = "0.8"
